<resources>
    <string name="app_name">Vectors</string>
    <string name="vectors">Vectors</string>
    <string name="vectors_full_form">Video Communication through Opportunistic Relays and Scalable Video Coding</string>
    <string name="about_vectors">To use the app, just press the "Start Vectors" button on the previous screen and leave the app running in the background. The app will automatically try to connect to devices in close proximity for exchanging scalable video data.\n\nVectors is a research project at BITS Pilani Hyderabad Campus for studying the effectiveness of using Delay Tolerant Networks for sending user-generated Video. This project uses the Scalable Video Codec (SVC) for encoding video data on the Linux source at the university library.\n\nAndroid phones are used as nodes for relaying the data to the destination computer at the Gandhi Bhavan entrance. This app optimises the sending of data over Bluetooth to minimise power consumption.\n\nPlease fill out the below Google Form to help us follow your participation for the month of April 2018.</string>
    <string name="five_hundred_years_link"><a href="http://500py.blogspot.in/2014/06/welcome.html?m=1">500 Person Years of Rural Employment Initiative</a></string>
    <string name="swifiic_link"><a href="http://www.swifiic.in/">SWiFiIC Project Link</a></string>
    <string name="privacy_policy_link"><a href="https://pastebin.com/raw/8Zr65vvX">Privacy Policy</a></string>
    <string name="google_form_link"><a href="https://goo.gl/forms/Lrx0Iu8cTxxKQ75v1">Google Form</a></string>
    <string name="start_button_text">Start Broadcasting</string>
    <string name="stop_button_text">Stop Broadcasting</string>

</resources>
