<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/titleText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="16dp"
                android:text="@string/vectors"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/titleFullForm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/vectors_full_form"
                android:gravity="center"
                android:textStyle="bold"
                android:padding="8dp" />

            <TextView
                android:id="@+id/aboutVectors"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/about_vectors"
                android:textAlignment="viewStart"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/swifiicLink"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/swifiic_link"
                android:autoLink="web"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/fiveHundredLink"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/five_hundred_years_link"
                android:autoLink="web"
                android:textSize="16sp" />
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>